--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
     <!-- The Modal -->
     <div id="myModal" class="modal">
       <!-- Modal content -->
-      <div class="modal-content formularioSection__form pY-2 pX-2">
+      <div class="modal-content formularioSection__form relative pY-2 pX-2">
+
+        <span class="close">X</span>
+        
         <div class="text-center">
           <img
             src="images/ilustracion vectores.svg"
