--- a/index.html
+++ b/index.html
@@ -21,9 +21,8 @@
     <div id="myModal" class="modal">
       <!-- Modal content -->
       <div class="modal-content formularioSection__form relative pY-2 pX-2">
-
         <span class="close">X</span>
-        
+
         <div class="text-center">
           <img
             src="images/ilustracion vectores.svg"
@@ -71,9 +70,9 @@
         </h1>
 
         <button
-          class="openPoup btn btn--radiusMd c-white main-btn fs-2 mT-2 pX-2 pY-1"
+          class="openPoup btn btn--radiusMd text-transform-uppercase c-white main-btn fs-2 mT-2 pX-2 pY-1"
         >
-          GANAR DINERO VIAJANDO
+          ¡Cuéntame cómo!
         </button>
       </div>
     </header>
@@ -182,9 +181,9 @@
         </div>
         <div class="text-center mT-10">
           <button
-            class="btn btn--radiusMd c-white main-btn fs-2 pX-2 pY-1 mT-1"
+            class="btn btn--radiusMd text-transform-uppercase c-white main-btn fs-2 pX-2 pY-1 mT-1"
           >
-            GANAR DINERO VIAJANDO
+            ¡Cuéntame cómo!
           </button>
         </div>
       </div>
@@ -242,9 +241,9 @@
       </div>
 
       <button
-        class="btn btn--radiusMd c-white main-btn fs-small pX-2 pY-1 mT-1"
+        class="btn btn--radiusMd text-transform-uppercase c-white main-btn fs-small pX-2 pY-1 mT-1"
       >
-        GANAR DINERO VIAJANDO
+        Quiero saber más trucos
       </button>
     </div>
     <!-- div -->
@@ -400,11 +399,23 @@
             Si la quieres, sólo tienes que rellenar este formulario:
           </h2>
 
-          <input type="text" class="formularioSection__input fs-2 mT-4" />
+          <input
+            type="text"
+            class="formularioSection__input fs-2 mT-4"
+            placeholder="Nombre y Apellido"
+          />
 
-          <input type="text" class="formularioSection__input fs-2 mT-4" />
+          <input
+            type="email"
+            class="formularioSection__input fs-2 mT-4"
+            placeholder="Email"
+          />
 
-          <input type="text" class="formularioSection__input fs-2 mT-4" />
+          <input
+            type="tel"
+            class="formularioSection__input fs-2 mT-4"
+            placeholder="Teléfono"
+          />
 
           <textarea class="formularioSection__textarea fs-2 mT-4"></textarea>
 
@@ -412,7 +423,7 @@
             <button
               class="formularioSection__btn btn btn--radiusMd white-bg main-btn-color fs-2 pX-2 pY-1"
             >
-              enviar
+              ¡Envíame la guía ahora mismo!
             </button>
           </div>
         </form>
