--- a/youtube.html
+++ b/youtube.html
@@ -50,12 +50,17 @@
         A continuación te voy a mostrar un vídeo de como gano dinero viajando
       </p>
 
-      <div
-        style="width: 100%; height: 40rem; background: gray"
-        class="mT-3"
-      ></div>
+      <div class="mT-3">
+        <iframe
+          src="https://player.vimeo.com/video/696038438?h=d4aa48a81a&color=0068DE&title=0&byline=0&portrait=0"
+          frameborder="0"
+          allow="autoplay; fullscreen; picture-in-picture"
+          allowfullscreen
+          class="iframe"
+        ></iframe>
+      </div>
 
-      <p class="main-color fs-responsive-md fw-bold">
+      <p class="main-color fs-responsive-md fw-bold mT-3">
         En breve recibirás en tu bandeja de correos
       </p>
 
